--- a/src/containers/Navbar/Navbar.css
+++ b/src/containers/Navbar/Navbar.css
@@ -1,4 +1,16 @@
 .navigation-wrapper {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
+    background-color: #333;
+    margin-bottom: 1rem;
+}
+
+.navigation-wrapper a {
+    color: white;
+    padding: 0.875rem 1rem;
+    text-decoration: none;
+}
+
+.route-link-active {
+    background-color: #111;
 }
