--- a/src/containers/Navbar/Navbar.css
+++ b/src/containers/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navigation-wrapper {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     background-color: #333;
     margin-bottom: 1rem;
 }
