--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -7,6 +7,7 @@
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
     margin: auto;
+    margin-top: 32px;
 }
 
 @-webkit-keyframes spin {
