--- a/src/components/NewsItem/NewsItem.css
+++ b/src/components/NewsItem/NewsItem.css
@@ -1,14 +1,29 @@
 .news-item-wrapper {
     width: 250px;
+    border: 1px solid #c9c9c9;
+    box-shadow: 2px 2px 4px rgb(0 0 0 / 15%);
+    margin-bottom: 16px;
 }
 
 .news-item-wrapper a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-decoration: none;
     color: #000;
+}
+
+.news-item-wrapper .news-description {
+    margin-bottom: 0;
 }
 
 .news-image {
     width: 200px;
     height: 100px;
     object-fit: cover;
+}
+
+.news-item-header,
+.news-description {
+    text-align: center;
 }
