--- a/src/containers/News/NewsSearchForm/NewsSearchForm.css
+++ b/src/containers/News/NewsSearchForm/NewsSearchForm.css
@@ -3,13 +3,13 @@
 }
 
 .search-form-wrapper form {
-    display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
 }
 
+.search-form-wrapper form,
 .search-row {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .article-range-label {
