--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,7 +1,7 @@
 .loader {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 16px solid #7764CA;
     width: 50px;
     height: 50px;
     -webkit-animation: spin 2s linear infinite;
