--- a/src/containers/Navbar/Navbar.css
+++ b/src/containers/Navbar/Navbar.css
@@ -1,16 +1,18 @@
 .navigation-wrapper {
     display: flex;
     justify-content: flex-start;
-    background-color: #333;
+    background-color: #7764CA;
     margin-bottom: 1rem;
 }
 
 .navigation-wrapper a {
     color: white;
-    padding: 0.875rem 1rem;
+    padding: 8px 16px;
     text-decoration: none;
+    margin: 8px;
 }
 
 .route-link-active {
-    background-color: #111;
+    background-color: #9181D4;
+    border-radius: 16px;
 }
