--- a/src/containers/News/SearchNews/SearchNews.css
+++ b/src/containers/News/SearchNews/SearchNews.css
@@ -8,6 +8,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding: 4px;
+    border-radius: 8px;
 }
 
 .pagination {
