--- a/src/containers/Todos/TodosList/TodosList.css
+++ b/src/containers/Todos/TodosList/TodosList.css
@@ -1,5 +1,8 @@
 .show-hide-create-todo {
-    float: right;
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    margin-bottom: 16px;
 }
 
 .todo-list-wrapper {
