--- a/src/containers/News/NewsSearchForm/NewsSearchForm.css
+++ b/src/containers/News/NewsSearchForm/NewsSearchForm.css
@@ -19,6 +19,7 @@
 .article-range-label {
     display: block;
     text-align: center;
+    margin-bottom: 8px;
 }
 
 .form-input {
@@ -26,7 +27,7 @@
 }
 
 .news-submit-button {
-    width: 60px;
+    width: 80px;
 }
 
 .react-datepicker__tab-loop {
