--- a/src/containers/Todos/TodoForm/TodoForm.css
+++ b/src/containers/Todos/TodoForm/TodoForm.css
@@ -1,4 +1,5 @@
 .form-wrapper {
+    margin: auto;
     margin-bottom: 32px;
     width: 320px;
 }
@@ -9,7 +10,7 @@
 
 .form-input {
     display: block;
-    margin-bottom: 8px;
+    margin: 8px 0;
 }
 
 .form-error {
